--- a/src/assets/css/_images.scss
+++ b/src/assets/css/_images.scss
@@ -64,8 +64,8 @@
 
 .km-icon-cluster {
   display: inline-block;
-  width: 20px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
   mask: url("/assets/images/icons/clusters.svg");
   mask-repeat: no-repeat;
   mask-size: contain;
@@ -74,8 +74,8 @@
 
 .km-icon-key {
   display: inline-block;
-  width: 20px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
   mask: url("/assets/images/icons/ssh-keys.svg");
   mask-repeat: no-repeat;
   mask-size: contain;
@@ -84,8 +84,8 @@
 
 .km-icon-project {
   display: inline-block;
-  width: 20px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
   mask: url("/assets/images/icons/service-accounts.svg");
   mask-repeat: no-repeat;
   mask-size: contain;
@@ -94,8 +94,8 @@
 
 .km-icon-member {
   display: inline-block;
-  width: 20px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
   mask: url("/assets/images/icons/members.svg");
   mask-repeat: no-repeat;
   mask-size: contain;
